--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,17 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
+<!-- Remove title from banner -->
+<style>
+  .page__banner-title {
+    display: none;
+  } 
+</style>
+
+<!-- start the buttons in the banner on the left -->
+<style>
+  .page__banner-buttons {
+    text-align: left;
+  } 
+</style>
