--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -79,3 +79,8 @@ h1, h2, h3, h4, h5, h6,
 .greedy-nav .page-link {
   font-weight: normal !important;
 }
+
+/* Hide site title in masthead */
+.greedy-nav .site-title {
+  display: none !important;
+}
